--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -8,41 +8,16 @@
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_mail2"
-        android:id="@+id/textView16"
-        android:padding="5dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="60dp"
-        android:layout_alignRight="@+id/email_1"
-        android:layout_alignEnd="@+id/email_1"
-        android:layout_alignLeft="@+id/email_1"
-        android:layout_alignStart="@+id/email_1" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/email_1"
-        android:layout_below="@+id/textView16"
+        android:hint="@string/hint"
+        android:id="@+id/email_l"
+        android:layout_marginTop="50dp"
         android:layout_alignLeft="@+id/pwd_1"
         android:layout_alignStart="@+id/pwd_1" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_pwd_1"
-        android:id="@+id/textView17"
-        android:padding="5dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/email_1"
-        android:layout_alignLeft="@+id/textView16"
-        android:layout_alignStart="@+id/textView16" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -50,14 +25,17 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/pwd_1"
-        android:layout_below="@+id/textView17"
+        android:hint="@string/pwd_hint"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/email_l"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signIn"
-        android:background="#cf4848"
+        android:text="@string/sign_In"
+        android:textColor="#fff"
+        android:background="#d15351"
         android:id="@+id/btn_signIn"
         android:layout_below="@+id/pwd_1"
         android:layout_alignLeft="@+id/pwd_1"
