--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,100 +7,61 @@
     android:fitsSystemWindows="true"
     tools:context="com.jshikami235gmail.pataride.Sign_up">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="First name"
-        android:id="@+id/textView18"
-        android:textColor="#6c6c6c"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="45dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="55dp" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/first_name"
-        android:layout_below="@+id/textView18"
-        android:layout_alignLeft="@+id/textView18"
-        android:layout_alignStart="@+id/textView18"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="20dp" />
+        android:hint="@string/first_et"
+        android:layout_marginTop="57dp"
+        android:layout_marginLeft="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingRight="150dp" />
 
-    <TextView
+
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Second name"
-        android:id="@+id/textView19"
-        android:textColor="#6c6c6c"
+        android:id="@+id/second_name"
+        android:hint="Second Name"
+        android:layout_marginTop="50dp"
         android:layout_below="@+id/first_name"
+        android:layout_marginBottom="20dp"
+        android:layout_alignRight="@+id/first_name"
+        android:layout_alignEnd="@+id/first_name"
         android:layout_alignLeft="@+id/first_name"
         android:layout_alignStart="@+id/first_name" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/second_name"
-        android:layout_below="@+id/textView19"
-        android:layout_alignLeft="@+id/textView19"
-        android:layout_alignStart="@+id/textView19"
+        android:id="@+id/email_1"
+        android:hint="@string/email_et"
+        android:layout_below="@+id/second_name"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="20dp"
         android:layout_alignRight="@+id/first_name"
-        android:layout_alignEnd="@+id/first_name" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Email address"
-        android:id="@+id/textView20"
-        android:textColor="#6c6c6c"
-        android:layout_below="@+id/second_name"
+        android:layout_alignEnd="@+id/first_name"
+        android:inputType="textPersonName"
         android:layout_alignLeft="@+id/second_name"
         android:layout_alignStart="@+id/second_name" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:layout_below="@+id/textView20"
-        android:layout_alignLeft="@+id/textView20"
-        android:layout_alignStart="@+id/textView20"
-        android:layout_marginBottom="20dp"
-        android:layout_alignRight="@+id/first_name"
-        android:layout_alignEnd="@+id/first_name" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Password"
-        android:id="@+id/textView21"
-        android:textColor="#6c6c6c"
-        android:layout_below="@+id/email"
-        android:layout_alignLeft="@+id/email"
-        android:layout_alignStart="@+id/email" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
+        android:hint="Password"
+        android:layout_marginTop="50dp"
         android:id="@+id/password"
-        android:layout_below="@+id/textView21"
-        android:layout_alignLeft="@+id/textView21"
-        android:layout_alignStart="@+id/textView21"
+        android:layout_below="@+id/email_1"
         android:layout_marginBottom="20dp"
         android:layout_alignRight="@+id/first_name"
-        android:layout_alignEnd="@+id/first_name" />
+        android:layout_alignEnd="@+id/first_name"
+        android:layout_alignLeft="@+id/email_1"
+        android:layout_alignStart="@+id/email_1" />
 
     <Button
         android:layout_width="match_parent"
@@ -110,11 +71,11 @@
         android:text="Sign up"
         android:textColor="#fff"
         android:id="@+id/btn_signUp"
-        android:layout_alignLeft="@+id/password"
-        android:layout_alignStart="@+id/password"
         android:layout_alignRight="@+id/first_name"
         android:layout_alignEnd="@+id/first_name"
-        android:layout_marginBottom="80dp"
-        android:layout_marginTop="30dp" />
+        android:layout_marginBottom="70dp"
+        android:layout_marginTop="0dp"
+        android:layout_alignLeft="@+id/password"
+        android:layout_alignStart="@+id/password" />
 
 </RelativeLayout>
