--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -10,7 +10,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_signup_trial"
-    tools:context="com.jshikami235gmail.pataride.SignupTrial">
+    tools:context="com.jshikami235gmail.pataride.Sign_up">
 
     <EditText
         android:layout_width="wrap_content"
