--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="com.jshikami235gmail.pataride.SignupTrial">
+    tools:context="com.jshikami235gmail.pataride.Sign_up">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
@@ -17,7 +17,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_signup_trial" />
+    <include layout="@layout/content_signup" />
 
 
 
